@@ -18,9 +18,9 @@
 <metal:content-core define-macro="content-core">
 
   <div class="cover-header">
-    <span tal:content="python:context.portal_type">Portal Type here</span>
+    <span tal:content="python:context.portal_type">Portal Type</span>
     <span>|</span>
-    <span tal:content="context/portal_properties/title">Portal Title</span>
+    <span tal:content="view/header">Navigation Root Title</span>
   </div>
 
   <h1 class="cover-title" tal:content="context/Title">
@@ -37,7 +37,7 @@
     <div class="cover-image" tal:condition="context/getImage|nothing">
       <a tal:define="here_url context/@@plone_context_state/object_url"
         tal:attributes="href string:$here_url/image/image_view_fullscreen">
-        <img tal:attributes="src string:$here_url/image_large" style="min-width: 100%; width: 100%;" />
+        <img tal:attributes="src string:$here_url/image" style="min-width: 100%; width: 100%;" />
       </a>
     </div>
 
