@@ -1,23 +1,15 @@
 <?xml version="1.0"?>
 <metadata>
    <description>EEA Design profile</description>
-   <version>7.6</version>
+   <version>8.1</version>
    <dependencies>
-
-        <!-- <dependency>profile-Products.EEAContentTypes:default</dependency> -->
         <dependency>profile-Products.EEAPloneAdmin:default</dependency>
         <dependency>profile-Products.NavigationManager:default</dependency>
         <dependency>profile-Products.eeawebapplication:default</dependency>
-
         <dependency>profile-eea.facetednavigation:default</dependency>
         <dependency>profile-eea.promotion:default</dependency>
         <dependency>profile-eea.themecentre:default</dependency>
         <dependency>profile-eea.translations:default</dependency>
-
         <dependency>profile-valentine.linguaflow:default</dependency>
-
     </dependencies>
 </metadata>
-
-
-
