@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object name="portal_css">
+  <stylesheet
+    id="pdf.print.css"
+    media="print"
+    expression="python:'download.pdf' in request.URL0"
+  />
+</object>
